@@ -1,0 +1,65 @@
+<animated-vector
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:aapt="http://schemas.android.com/aapt">
+  <aapt:attr name="android:drawable">
+    <vector
+      android:name="vector"
+      android:width="24dp"
+      android:height="24dp"
+      android:viewportWidth="24"
+      android:viewportHeight="24">
+      <path
+        android:name="lines"
+        android:pathData="M 14 4 L 14 20 M 10 4 L 10 20 M 4 10 L 20 10 M 4 14 L 20 14"
+        android:strokeColor="@color/icon"
+        android:strokeWidth="2"
+        android:strokeLineCap="round" />
+      <group android:name="group">
+        <path
+          android:name="path_1"
+          android:pathData="M 7 5 L 17 5 C 17.53 5 18.039 5.211 18.414 5.586 C 18.789 5.961 19 6.47 19 7 L 19 17 C 19 17.53 18.789 18.039 18.414 18.414 C 18.039 18.789 17.53 19 17 19 L 7 19 C 6.47 19 5.961 18.789 5.586 18.414 C 5.211 18.039 5 17.53 5 17 L 5 7 C 5 6.47 5.211 5.961 5.586 5.586 C 5.961 5.211 6.47 5 7 5"
+          android:fillColor="@color/icon"
+          android:strokeWidth="1" />
+        <path
+          android:name="path_2"
+          android:pathData="M 8 7 L 16 7 C 16.265 7 16.52 7.105 16.707 7.293 C 16.895 7.48 17 7.735 17 8 L 17 16 C 17 16.265 16.895 16.52 16.707 16.707 C 16.52 16.895 16.265 17 16 17 L 8 17 C 7.735 17 7.48 16.895 7.293 16.707 C 7.105 16.52 7 16.265 7 16 L 7 8 C 7 7.735 7.105 7.48 7.293 7.293 C 7.48 7.105 7.735 7 8 7"
+          android:fillColor="@color/background"
+          android:strokeWidth="1" />
+        <path
+          android:name="path_3"
+          android:pathData="M 10 9 C 9.446 9 9 9.446 9 10 L 9 14 C 9 14.554 9.446 15 10 15 L 14 15 C 14.554 15 15 14.554 15 14 L 15 10 C 15 9.446 14.554 9 14 9 L 10 9 Z M 11 11 L 13 11 L 13 13 L 11 13 L 11 11 Z"
+          android:fillColor="@color/icon"
+          android:strokeWidth="1" />
+      </group>
+    </vector>
+  </aapt:attr>
+  <target android:name="group">
+    <aapt:attr name="android:animation">
+      <set>
+        <objectAnimator
+          android:propertyName="translateX"
+          android:duration="100"
+          android:valueFrom="0"
+          android:valueTo="1"
+          android:valueType="floatType"
+          android:interpolator="@android:interpolator/fast_out_slow_in" />
+        <objectAnimator
+          android:propertyName="translateX"
+          android:startOffset="100"
+          android:duration="100"
+          android:valueFrom="1"
+          android:valueTo="-1"
+          android:valueType="floatType"
+          android:interpolator="@android:interpolator/fast_out_slow_in" />
+        <objectAnimator
+          android:propertyName="translateX"
+          android:startOffset="200"
+          android:duration="100"
+          android:valueFrom="-1"
+          android:valueTo="0"
+          android:valueType="floatType"
+          android:interpolator="@android:interpolator/fast_out_slow_in" />
+      </set>
+    </aapt:attr>
+  </target>
+</animated-vector>
