@@ -486,7 +486,7 @@
         <ImageView
           android:id="@+id/image_gpu"
           style="@style/Widget.Doodle.ImageView.ListItem.Icon"
-          android:src="@drawable/ic_round_zoom_out"
+          android:src="@drawable/ic_round_memory"
           tools:ignore="ContentDescription" />
 
         <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox.Stretch">
